==> pauvilanovaors/Software_BaseRobot/BaseRobot_proj/Core/Src/tof.c <==
#include <unistd.h>
#include <stdio.h>
#include <stdint.h>
#include <stdbool.h>
#include <string.h>
#include <fcntl.h>
#include "stm32f4xx_hal.h"
#include "tof.h"
#define calcMacroPeriod(vcsel_period_pclks) ((((uint32_t)2304 * (vcsel_period_pclks) * 1655) + 500) / 1000)
#define encodeVcselPeriod(period_pclks) (((period_pclks) >> 1) - 1)
#define SEQUENCE_ENABLE_FINAL_RANGE 0x80
#define SEQUENCE_ENABLE_PRE_RANGE   0x40
#define SEQUENCE_ENABLE_TCC         0x10
#define SEQUENCE_ENABLE_DSS         0x08
#define SEQUENCE_ENABLE_MSRC        0x04
#define REG_IDENTIFICATION_MODEL_ID		0xc0
#define REG_IDENTIFICATION_REVISION_ID		0xc2
#define REG_SYSRANGE_START			0x00
#define REG_RESULT_INTERRUPT_STATUS 		0x13
#define RESULT_RANGE_STATUS      		0x14
#define ALGO_PHASECAL_LIM                       0x30
#define ALGO_PHASECAL_CONFIG_TIMEOUT            0x30
#define GLOBAL_CONFIG_VCSEL_WIDTH               0x32
#define FINAL_RANGE_CONFIG_VALID_PHASE_LOW      0x47
#define FINAL_RANGE_CONFIG_VALID_PHASE_HIGH     0x48
#define PRE_RANGE_CONFIG_VCSEL_PERIOD           0x50
#define PRE_RANGE_CONFIG_TIMEOUT_MACROP_HI      0x51
#define PRE_RANGE_CONFIG_VALID_PHASE_LOW        0x56
#define PRE_RANGE_CONFIG_VALID_PHASE_HIGH       0x57
#define REG_MSRC_CONFIG_CONTROL                 0x60
#define FINAL_RANGE_CONFIG_VCSEL_PERIOD         0x70
#define FINAL_RANGE_CONFIG_TIMEOUT_MACROP_HI    0x71
#define MSRC_CONFIG_TIMEOUT_MACROP              0x46
#define FINAL_RANGE_CONFIG_MIN_COUNT_RATE_RTN_LIMIT  0x44

static uint16_t readReg16(uint8_t regAddr, uint8_t devAddr)
{
	uint8_t datatmp[2];
	uint16_t data; //uint16_t == unsigned short

	//1. Write register address in VL53L0X
	HAL_I2C_Master_Transmit(&hi2c1,devAddr,&regAddr,1,1000);
	//2. Read data from 2 byte register
	HAL_I2C_Master_Receive(&hi2c1,devAddr+1,datatmp,2,1000);

	data = (datatmp[0]<<8) + datatmp[1];

	return data;

}

static uint8_t readReg(uint8_t regAddr, uint8_t devAddr)
{
	uint8_t data;  //unsigned char == uint8_t

	//1. Write register address in VL53L0X
	HAL_I2C_Master_Transmit(&hi2c1,devAddr,&regAddr,1,1000);
	//2. Read data from 1 byte register
	HAL_I2C_Master_Receive(&hi2c1,devAddr+1,&data,1,1000);

	return data;
}

static void readMulti(uint8_t regAddr, uint8_t *pBuf, int size, uint8_t devAddr)
{
    //1. Write index of register
	HAL_I2C_Master_Transmit(&hi2c1,devAddr,&regAddr,1,1000);

	//2. Read size bytes
	HAL_I2C_Master_Receive(&hi2c1,devAddr+1,pBuf,size,1000);

}

static void writeMulti(uint8_t regAddr, uint8_t *pBuf, int size, uint8_t devAddr)
{
	uint8_t buf[size + 1];
	buf[0] = regAddr;
	for(int i = 1; i<size+1;i++){
		buf[i] = *(pBuf++);
	}
	HAL_I2C_Master_Transmit(&hi2c1,devAddr,buf,size+1,1000);

}

void writeReg16(uint8_t regAddr, uint16_t data, uint8_t devAddr)
{
	uint8_t datatmp[4];

	datatmp[0] = regAddr;
	datatmp[1] = (uint8_t)(data >> 8); // MSB first
	datatmp[2] = (uint8_t)data;
	HAL_I2C_Master_Transmit(&hi2c1,devAddr,datatmp,3,1000);

}

static void writeReg(uint8_t regAddr, uint8_t data, uint8_t devAddr)
{
	uint8_t datatmp[2];

	datatmp[0] = regAddr;
	datatmp[1] = data;

	HAL_I2C_Master_Transmit(&hi2c1,devAddr,datatmp,2,1000);
}

void writeRegList(uint8_t *dataList, uint8_t devAddr)
{
	uint8_t pcount = *dataList++;

	while(pcount){
		HAL_I2C_Master_Transmit(&hi2c1,devAddr,dataList,2,1000);
		dataList += 2;
		pcount--;
	}
}
